# vk_dot_xml_parser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: main.rs
src/: commands.rs  enums.rs  extensions.rs  feature.rs  formats.rs  lib.rs  platforms.rs  spirv_capabilities.rs  spirv_extensions.rs  type_entry.rs  utils.rs  vendor_tags.rs
