[package]
name = "vk_dot_xml_parser"
description = "Parser for the Vulkan `vk.xml` file"
repository = "https://github.com/Lokathor/vk_dot_xml_parser"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
log = "0.4.17"
magnesium = { version = "1.2.1", features = ["alloc"] }
stderrlog = { version = "0.5.4", default-features = false }

[profile.dev.package."*"]
opt-level = 3
